Fix character alignment within digit keys (center)

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,15 @@ body {
 
 /* key component */
 button  {
-    align-items: center;
     border-radius: 10px;
     color: white;
-    display: flex;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 65px;
     font-weight: 600;
     height: 80px;
-    justify-content: center;
     padding: 0;
     width: 80px;
+    line-height: 0;
 }
 
 button.btn-digit {
